responsive form ok

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
             <button style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51); margin:5px;"><a class="nav-link active" routerLink="/manageproject" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">Projects</a></button>
         </div>
         <div class="col-4 mt-1">
-            <button style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51);"><a class="nav-link active" routerLink="/newuser" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">Users</a></button>
+            <button style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51);"><a class="nav-link active" routerLink="/manageuser" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">Users</a></button>
         </div>
     </div>
 </section>
