new version with angular material

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,26 +1,25 @@
-<section><div class="header">
-        <h1>welcome to System ressource management</h1>
-    </div>
-</section>  
-
 <div>
     <h1>DASHBOARD</h1>
 </div>
     
-<section><div class="container m-5">
-        <div class="col-4 mt-1">
+<div class="container mt-5">
+    <div class="row"> 
+        <div class="col">
             <button style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51);"><a class="nav-link active" routerLink="/allallocation" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">ALL ALLOCATIONS</a></button>
         </div>
-        <div class="col-4 mt-1">
+        <div class="col">
             <button style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51);"><a class="nav-link active" routerLink="/manageitem" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">Items</a></button>
         </div>
-        <div class="col-4 mt-1">
+        <div class="col">
             <button style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51); margin:5px;"><a class="nav-link active" routerLink="/manageproject" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">Projects</a></button>
         </div>
-        <div class="col-4 mt-1">
-            <button style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51);"><a class="nav-link active" routerLink="/manageuser" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">Users</a></button>
+        <div class="col">
+            <button
+       style="height: 100px; width: 250px; border-radius: 40px; background-color: rgb(51, 43, 51);"><a class="nav-link active" routerLink="/manageuser" routerLinkActive="active-link" [routerLinkActiveOptions] = "{exact:true}">Users</a></button>
         </div>
     </div>
-</section>
+</div>
+
+
 
     
