--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -3,9 +3,9 @@ body{
     padding: 0;
 }
 .header {
-    background-image: url('https://res.cloudinary.com/dtdpx59sc/image/upload/v1668069890/nurse_study_online_mpl9oe.jpg');
-    height: 400px;
-    background-position: center;
+    background-color:burlywood;
+    height: 100px;
+    background-position: cover;
     background-size:cover;
     margin-bottom: 30px;
 }
