--- a/src/app/narvbar/narvbar.component.html
+++ b/src/app/narvbar/narvbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+
+<!--<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="">Ressource Management</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,4 +26,4 @@
         </ul>
       </div>
     </div>
-  </nav>
+  </nav>--->
