--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,65 @@
+
+<mat-toolbar>
+    <button mat-icon-button class="exemple-icon" aria-label="Exemple icon-button with menu icon">
+        <mat-icon>supervised_user_circle</mat-icon>
+    </button>
+    <span>Sytem Management</span>
+    <span class="exemple-spacer"></span>
+    <button mat-raised-button color="warn"(click)="openDialog()">Add Product</button>
+</mat-toolbar>
+
+<div class="container">
+    <div style="margin-top: 30px;">
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource">
+          
+              <!-- Position Column -->
+              <ng-container matColumnDef="productName">
+                <th mat-header-cell *matHeaderCellDef> Product Name </th>
+                <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
+              </ng-container>
+          
+              <!-- Name Column -->
+              <ng-container matColumnDef="category">
+                <th mat-header-cell *matHeaderCellDef> category </th>
+                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              </ng-container>
+          
+              <!-- Weight Column -->
+              <ng-container matColumnDef="date">
+                <th mat-header-cell *matHeaderCellDef> Date </th>
+                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+              </ng-container>
+          
+              <!-- Symbol Column -->
+              <ng-container matColumnDef="price">
+                <th mat-header-cell *matHeaderCellDef> Price </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+              </ng-container>
+              <!-- Symbol Column -->
+              <ng-container matColumnDef="freshness">
+                <th mat-header-cell *matHeaderCellDef> freshness</th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+              </ng-container>
+              <!-- Symbol Column -->
+              <ng-container matColumnDef="comment">
+                <th mat-header-cell *matHeaderCellDef> Comment </th>
+                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+              </ng-container>
+          
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+          
+            <mat-paginator [pageSizeOptions]="[]"
+                           showFirstLastButtons
+                           aria-label="Select page of periodic elements">
+            </mat-paginator>
+          </div>
+          
+
+    </div>
+</div>
+
 <app-narvbar></app-narvbar>
 <router-outlet></router-outlet>
